--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "mapbox-gl": "^3.11.1",
     "next": "15.3.1",
     "postcss": "^8.5.3",
