--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "^15.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0"
     "@supabase/supabase-js": "^2.49.4",
     "mapbox-gl": "^3.11.1",
     "next": "15.3.1",
@@ -19,6 +23,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.4",
     "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^20",
@@ -27,6 +33,8 @@
     "@types/react-map-gl": "^6.1.7",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "tailwindcss": "^4",
+    "typescript": "^5"
     "tailwindcss": "^4.1.4",
     "typescript": "^5"
   }
